list print job and add auto migrate
