# docs/swagger.json
@@ -634,7 +634,7 @@
             }
         },
         "/jobs/cancel/{id}": {
-            "delete": {
+            "post": {
                 "security": [
                     {
                         "Bearer": []
@@ -788,7 +788,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "object"
+                                            "$ref": "#/definitions/dto.PrintJobResponseBody"
                                         }
                                     }
                                 }
@@ -857,7 +857,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "object"
+                                            "$ref": "#/definitions/dto.PrintJobResponseBody"
                                         }
                                     }
                                 }
@@ -1510,14 +1510,37 @@
                 "a3",
                 "a4",
                 "a5",
-                "a6"
+                "a2"
             ],
             "x-enum-varnames": [
                 "PaperSizeA3",
                 "PaperSizeA4",
                 "PaperSizeA5",
-                "PaperSizeA6"
+                "PaperSizeA2"
             ]
+        },
+        "dto.PrintJobResponseBody": {
+            "type": "object",
+            "properties": {
+                "document_id": {
+                    "type": "string"
+                },
+                "estimated_time": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "job_status": {
+                    "type": "string"
+                },
+                "pages_printed": {
+                    "type": "integer"
+                },
+                "total_pages": {
+                    "type": "integer"
+                }
+            }
         },
         "dto.PrintSettings": {
             "type": "object",
@@ -1610,10 +1633,14 @@
         "dto.SubmitPrintJobRequestBody": {
             "type": "object",
             "required": [
+                "cluster_id",
                 "document_id",
                 "print_settings"
             ],
             "properties": {
+                "cluster_id": {
+                    "type": "integer"
+                },
                 "document_id": {
                     "type": "string"
                 },
